--- a/index.html
+++ b/index.html
@@ -149,11 +149,29 @@
   <div class="container pb-4 contact">
     <p class="text-center mt-3 contact-text">Benimle iletisime geçebilirsiniz:
       <br>
-    <h5 class="contact-text">Eren İbin</h4>
+    <h5 class="contact-text">Çaglar Tuncu</h4>
       </p>
       <div>
         <img style="width: 210px; height: 160px; margin-bottom: 30px; border-radius: 10px;" src="sad.jpeg" alt="">
       </div>
+      <ul class="contact-list">
+        <li>
+          <div class="li-background d-flex justify-content-center align-items-center mb-3">
+            <a class="ahref" href="gorüsöneri.html" target="_blank">
+              <i class="fas fa-user-tie"></i>Görüş Ve Öneri</a>
+          </div>
+        </li>
+        <li>
+          <div class="li-background d-flex justify-content-center align-items-center"><a class="ahref"
+              href="iban.html"><i class="fas fa-money-check-alt"></i>İban Bilgileri</a></div>
+        </li>
+        <li>
+          <div class="li-background d-flex justify-content-center align-items-center">
+            <a class="ahref" href="https://www.instagram.com/torosnazaroptik/" target="_blank"><i
+                class="fab fa-instagram"></i> Instagram</a>
+          </div>
+        </li>
+        <li>
           <div class="li-background d-flex justify-content-center align-items-center">
            
             <a class="ahref"
@@ -162,7 +180,7 @@
               WhatsApp</a>
             
             </div>
-        </li>
+        </li> 
    <div class="mt-2">
                     <a href="https://www.google.com/maps?s=web&lqi=CgtuYXphciBvcHRpa0i1zqyE27GAgAhaHRAAEAEYABgBIgtuYXphciBvcHRpayoGCAIQABABkgEIb3B0aWNpYW6qAUYQASoPIgtuYXphciBvcHRpayghMiAQASIc7Xwxb-QTh8_83TaUYUKN7oDAkwg9WJcEE6IUwzIPEAIiC25hemFyIG9wdGlr&phdesc=89Aw2UDK2GU&vet=12ahUKEwj14OOgxNeDAxWdQPEDHTGJAqMQ1YkKegQIEhAO..i&cs=0&um=1&ie=UTF-8&fb=1&gl=tr&sa=X&geocode=KYFVJjjI8ycVMaWl4wu4IIRq&daddr=Yeni,+5328.+Sk.+17b,+33010+Akdeniz/Mersin"
                         class="btn btn-warning w-100" target="_blank"> <i class="fas fa-map-marker-alt"></i>&nbsp; Yol
