--- a/index.html
+++ b/index.html
@@ -149,28 +149,12 @@
   <div class="container pb-4 contact">
     <p class="text-center mt-3 contact-text">Benimle iletisime geçebilirsiniz:
       <br>
-    <h5 class="contact-text">Çaglar Tuncu</h4>
+    <h5 class="contact-text">Eren İbin</h4>
       </p>
       <div>
-        <img style="width: 210px; height: 160px; margin-bottom: 30px; border-radius: 10px;" src="sad.jpeg" alt="">
+        <img style="width: 210px; height: 160px; margin-bottom: 30px; border-radius: 10px;" src="https://nazar3313.github.io/nazaroptik/sad.jpeg" alt="">
       </div>
       <ul class="contact-list">
-        <li>
-          <div class="li-background d-flex justify-content-center align-items-center mb-3">
-            <a class="ahref" href="gorüsöneri.html" target="_blank">
-              <i class="fas fa-user-tie"></i>Görüş Ve Öneri</a>
-          </div>
-        </li>
-        <li>
-          <div class="li-background d-flex justify-content-center align-items-center"><a class="ahref"
-              href="iban.html"><i class="fas fa-money-check-alt"></i>İban Bilgileri</a></div>
-        </li>
-        <li>
-          <div class="li-background d-flex justify-content-center align-items-center">
-            <a class="ahref" href="https://www.instagram.com/torosnazaroptik/" target="_blank"><i
-                class="fab fa-instagram"></i> Instagram</a>
-          </div>
-        </li>
         <li>
           <div class="li-background d-flex justify-content-center align-items-center">
            
